src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Consulting_Stage__c</fullName>
        <description>National Accounts Custom Stages.  This field is used by the Consulting Sales team and they run reports on it.</description>
        <label>Consulting Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Schematic Design</fullName>
                    <default>true</default>
                    <label>Schematic Design</label>
                </value>
                <value>
                    <fullName>Design Development</fullName>
                </value>
                <value>
                    <fullName>Construction Documents</fullName>
                </value>
                <value>
                    <fullName>Specified Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_BOD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact</description>
        <inlineHelpText>Please choose the contact if Basis of Design is selected</inlineHelpText>
        <label>Contact BOD</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BOD Opportunities</relationshipLabel>
        <relationshipName>BOD_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Rollup__c</fullName>
        <description>It is a combination of Contact Name + “@” + Account Name + “(“Role”)”</description>
        <label>Contact Rollup</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracting_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Field</description>
        <label>Contracting Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Contracting Entity)</relationshipLabel>
        <relationshipName>OpportunitiesFu8I</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_Status__c</fullName>
        <description>If PW job, What is our contract status, Prime or Subcontractor?</description>
        <inlineHelpText>If PW Job, What is our contract status, Prime or Subcontractor?</inlineHelpText>
        <label>Contractor Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prevailing_Wage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Prime</fullName>
                </value>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Controls_Spec__c</fullName>
        <inlineHelpText>Controls Vendor BOD</inlineHelpText>
        <label>Controls BOD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alerton</fullName>
                </value>
                <value>
                    <fullName>Auto Logic</fullName>
                </value>
                <value>
                    <fullName>Honeywell</fullName>
                </value>
                <value>
                    <fullName>JCI</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Robertshaw</fullName>
                </value>
                <value>
                    <fullName>Siemens</fullName>
                </value>
                <value>
                    <fullName>TAC</fullName>
                </value>
                <value>
                    <fullName>Trane</fullName>
                </value>
                <value>
                    <fullName>Tren</fullName>
                </value>
                <value>
                    <fullName>Tridium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What lead was converted to create this Opportunity?</inlineHelpText>
        <label>Converted Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be marked to TRUE only if this Opportunity is created in the process of converting a Lead.</description>
        <inlineHelpText>This field will be marked to TRUE only if this Opportunity is created in the process of converting a Lead. Please do not use this field in Reports.</inlineHelpText>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Month__c</fullName>
        <description>This field is created for the purpose of Latin America Reports</description>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))&amp; &quot; &quot; &amp;CASE(MONTH(DATEVALUE(CreatedDate)), 1, &quot;01(January)&quot;, 2, &quot;02(February)&quot;, 3, &quot;03(March)&quot;, 4, &quot;04(April)&quot;, 5, &quot;05(May)&quot;, 6, &quot;06(June)&quot;, 7, &quot;07(July)&quot;, 8, &quot;08(August)&quot;, 9, &quot;09(September)&quot;, 10, &quot;10(October)&quot;, 11, &quot;11(November)&quot;, 12, &quot;12(December)&quot;, &quot;&quot;)</formula>
        <inlineHelpText>This field is created for the purpose of Latin America Reports</inlineHelpText>
        <label>Created Date(Month)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Approval_Status__c</fullName>
        <label>Credit Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                    <default>true</default>
                    <label>Hold</label>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Authorization__c</fullName>
        <description>Credit approval number assigned</description>
        <inlineHelpText>Credit approval number assigned</inlineHelpText>
        <label>Credit Authorization #</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPurchaseOrderNumber__c</fullName>
        <label>Purchase Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Number__c</fullName>
        <description>Customer PO #</description>
        <inlineHelpText>Customer PO #</inlineHelpText>
        <label>Customer PO #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Number__c</fullName>
        <description>Used to store Customer RFP #, etc.</description>
        <inlineHelpText>Used to store Customer RFP #, etc.</inlineHelpText>
        <label>Customer Reference #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_Objectives__c</fullName>
        <description>Project Objectives</description>
        <inlineHelpText>Project Objectives:The Project&apos;s major Milestones.</inlineHelpText>
        <label>Customer&apos;s Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_s_approval_process_milestones__c</fullName>
        <inlineHelpText>What are the customer’s approval process and decision milestones?</inlineHelpText>
        <label>Customer&apos;s approval process/milestones?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customers_ranking_of_this_project__c</fullName>
        <inlineHelpText>How does this project rank on the customer’s priority list?  How do we maintain/increase the priority?</inlineHelpText>
        <label>Customer&apos;s ranking of this project?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DA_Terms_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DA Terms &amp; Conditions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Dealmaker_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealmaker Opportunity</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>DM_Opportunity_Extra</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_District_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be populated by Cups DM &amp;ROSM Workflow rule and is used in Cups email notification.</description>
        <inlineHelpText>Opportunity Owner DM (District Manager)</inlineHelpText>
        <label>DM (District Manager)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DMOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSO_Hygiene__c</fullName>
        <formula>IF( 
OR( 
AND( 
ISPICKVAL(StageName,&apos;Develop Customer Solution/Provide Budget Price&apos;), 
Consulting_Engineer_Owner__c = &apos;&apos;, 
ISPICKVAL(Consulting_Stage__c ,&apos;&apos;) 
), 
AND( 
ISPICKVAL(StageName,&apos;Proposal/Price Quote/Bid&apos;), 
Consulting_Engineer_Owner__c = null, 
NOT(HasOpportunityLineItem), 
ISPICKVAL(Consulting_Stage__c ,&apos;&apos;) 
), 
AND( 
ISPICKVAL(StageName,&apos;Post Bid - Daikin Status Unknown&apos;), 
Consulting_Engineer_Owner__c = null, 
NOT(HasOpportunityLineItem), 
ISPICKVAL(Consulting_Stage__c ,&apos;&apos;) 
), 
AND( 
ISPICKVAL(StageName,&apos;Won - Not Released, Not Submitted&apos;), 
Consulting_Engineer_Owner__c = null, 
NOT(HasOpportunityLineItem), 
ISPICKVAL(Consulting_Stage__c ,&apos;&apos;),
ISBLANK(Release_Date__c), 
Job_Captain_CE__c = null, 
Job_Captain_Sales__c = null, 
Mechanical_Contractor__c = null 
), 
AND( 
ISPICKVAL(StageName,&apos;Won - Not Released, Submitted&apos;), 
Consulting_Engineer_Owner__c = null, 
NOT(HasOpportunityLineItem), 
ISPICKVAL(Consulting_Stage__c ,&apos;&apos;), 
Project_Engineer_Owner__c = null, 
Job_Captain_CE__c = null, 
Job_Captain_Sales__c = null, 
Mechanical_Contractor__c = null
), 
AND( 
ISPICKVAL(StageName,&apos;Won - Released&apos;), 
Consulting_Engineer_Owner__c = null, 
ISPICKVAL(Consulting_Stage__c ,&apos;&apos;), 
NOT(HasOpportunityLineItem), 
Project_Engineer_Owner__c = null, 
Job_Captain_CE__c = null, 
Job_Captain_Sales__c = null, 
Mechanical_Contractor__c = null 
), 
AND( 
ISPICKVAL(StageName,&apos;Closed Won&apos;), 
Consulting_Engineer_Owner__c = null, 
Project_Engineer_Owner__c = null, 
NOT(HasOpportunityLineItem), 
ISPICKVAL(Consulting_Stage__c ,&apos;&apos;), 
Job_Captain_CE__c = null, 
Job_Captain_Sales__c = null, 
Mechanical_Contractor__c = null 
), 
AND( 
ISPICKVAL(StageName,&apos;Closed Lost&apos;), 
Consulting_Engineer_Owner__c = null, 
NOT(HasOpportunityLineItem), 
ISPICKVAL(Consulting_Stage__c ,&apos;&apos;) 
), 
AND( 
ISPICKVAL(StageName,&apos;No Bid&apos;), 
Consulting_Engineer_Owner__c = null, 
NOT(HasOpportunityLineItem), 
ISPICKVAL(Consulting_Stage__c ,&apos;&apos;) 
) 
), 
TRUE, FALSE)</formula>
        <label>DSO Hygiene</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DST_ID__c</fullName>
        <externalId>true</externalId>
        <label>Daikin Tools Job GUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Address_Contact__c</fullName>
        <label>DT ALT Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Address_ID__c</fullName>
        <label>DT ALT Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Address_Line_1__c</fullName>
        <label>DT ALT Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Address_Line_2__c</fullName>
        <label>DT ALT Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Address_Line_3__c</fullName>
        <label>DT ALT Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Address_Name__c</fullName>
        <label>DT ALT Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Address_Phone__c</fullName>
        <label>DT ALT Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Address_Special_Delivery_Comments__c</fullName>
        <label>DT ALT Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT ALT Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_ALT_City__c</fullName>
        <label>DT ALT City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Contact_Email_Address__c</fullName>
        <label>DT ALT Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Country__c</fullName>
        <label>DT ALT Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_County__c</fullName>
        <label>DT ALT County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Fax__c</fullName>
        <label>DT ALT Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Hours_Before__c</fullName>
        <label>DT ALT Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_ALT_Postal_Code__c</fullName>
        <label>DT ALT Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_ALT_State__c</fullName>
        <label>DT ALT State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_AddressSpecialDeliveryComments__c</fullName>
        <label>DT Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Address_Contract__c</fullName>
        <label>DT Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Address_ID__c</fullName>
        <label>DT Address ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Address_Line1__c</fullName>
        <label>DT Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Address_Line2__c</fullName>
        <label>DT Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Address_Line3__c</fullName>
        <label>DT Address Line3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Address_Name__c</fullName>
        <label>DT Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Address_Phone__c</fullName>
        <label>DT Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_BA_Address_Contact__c</fullName>
        <label>DT BA Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Address_ID__c</fullName>
        <label>DT BA Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_BA_Address_Line_1__c</fullName>
        <label>DT BA Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Address_Line_2__c</fullName>
        <label>DT BA Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Address_Line_3__c</fullName>
        <label>DT BA Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Address_Name__c</fullName>
        <label>DT BA Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Address_Phone__c</fullName>
        <label>DT BA Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Address_Special_Delivery_Comments__c</fullName>
        <label>DT BA Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT BA Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_BA_City__c</fullName>
        <label>DT BA City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Contact_Email_Address__c</fullName>
        <label>DT BA Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Country__c</fullName>
        <label>DT BA Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_County__c</fullName>
        <label>DT BA County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Fax__c</fullName>
        <label>DT BA Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_Hours_Before__c</fullName>
        <label>DT BA Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_BA_Postal_Code__c</fullName>
        <label>DT BA Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_BA_State__c</fullName>
        <label>DT BA State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_City__c</fullName>
        <label>DT City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Country__c</fullName>
        <label>DT Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_County__c</fullName>
        <label>DT County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Address_Contact__c</fullName>
        <label>DT DES Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Address_ID__c</fullName>
        <label>DT DES Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_DES_Address_Line_1__c</fullName>
        <label>DT DES Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Address_Line_2__c</fullName>
        <label>DT DES Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Address_Line_3__c</fullName>
        <label>DT DES Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Address_Name__c</fullName>
        <label>DT DES Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Address_Phone__c</fullName>
        <label>DT DES Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Address_Special_Delivery_Comments__c</fullName>
        <label>DT DES Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT DES Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_DES_City__c</fullName>
        <label>DT DES City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Contact_Email_Address__c</fullName>
        <label>DT DES Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Country__c</fullName>
        <label>DT DES Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_County__c</fullName>
        <label>DT DES County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Fax__c</fullName>
        <label>DT DES Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_Hours_Before__c</fullName>
        <label>DT DES Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_DES_Postal_Code__c</fullName>
        <label>DT DES Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_DES_State__c</fullName>
        <label>DT DES State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Address_Contact__c</fullName>
        <label>DT END Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Address_ID__c</fullName>
        <label>DT END Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_END_Address_Line_1__c</fullName>
        <label>DT END Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Address_Line_2__c</fullName>
        <label>DT END Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Address_Line_3__c</fullName>
        <label>DT END Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Address_Name__c</fullName>
        <label>DT END Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Address_Phone__c</fullName>
        <label>DT END Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Address_Special_Delivery_Comments__c</fullName>
        <label>DT END Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT END Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_END_City__c</fullName>
        <label>DT END City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Contact_Email_Address__c</fullName>
        <label>DT END Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Country__c</fullName>
        <label>DT END Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_County__c</fullName>
        <label>DT END County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Fax__c</fullName>
        <label>DT END Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_Hours_Before__c</fullName>
        <label>DT END Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_END_Postal_Code__c</fullName>
        <label>DT END Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_END_State__c</fullName>
        <label>DT END State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Fax__c</fullName>
        <label>DT Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Address_Contact__c</fullName>
        <label>DT GC Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Address_ID__c</fullName>
        <label>DT GC Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_GC_Address_Line_1__c</fullName>
        <label>DT GC Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Address_Line_2__c</fullName>
        <label>DT GC Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Address_Line_3__c</fullName>
        <label>DT GC Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Address_Name__c</fullName>
        <label>DT GC Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Address_Phone__c</fullName>
        <label>DT GC Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Address_Special_Delivery_Comments__c</fullName>
        <label>DT GC Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT GC Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_GC_City__c</fullName>
        <label>DT GC City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Contact_Email_Address__c</fullName>
        <label>DT GC Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Country__c</fullName>
        <label>DT GC Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_County__c</fullName>
        <label>DT GC County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Fax__c</fullName>
        <label>DT GC Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_Hours_Before__c</fullName>
        <label>DT GC Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_GC_Postal_Code__c</fullName>
        <label>DT GC Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_GC_State__c</fullName>
        <label>DT GC State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_HoursBefore__c</fullName>
        <label>DT Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_IS_First_Name__c</fullName>
        <label>DT IS First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_IS_ID__c</fullName>
        <label>DT IS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_IS_Last_Name__c</fullName>
        <label>DT IS Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Address_Contact__c</fullName>
        <label>DT JOB Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Address_ID__c</fullName>
        <label>DT JOB Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Address_Line_1__c</fullName>
        <label>DT JOB Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Address_Line_2__c</fullName>
        <label>DT JOB Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Address_Line_3__c</fullName>
        <label>DT JOB Address Line3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Address_Name__c</fullName>
        <label>DT JOB Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Address_Phone__c</fullName>
        <label>DT JOB Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Address_Special_Delivery_Comments__c</fullName>
        <label>DT JOB Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT JOB Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_JOB_City__c</fullName>
        <label>DT JOB City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Contact_Email_Address__c</fullName>
        <label>DT JOB Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Country__c</fullName>
        <label>DT JOB Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_County__c</fullName>
        <label>DT JOB County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Fax__c</fullName>
        <label>DT JOB Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Hours_Before__c</fullName>
        <label>DT JOB Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Postal_Code__c</fullName>
        <label>DT JOB Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_State__c</fullName>
        <label>DT JOB State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Contact__c</fullName>
        <label>DT LEN Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_ID__c</fullName>
        <label>DT LEN Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Line_1__c</fullName>
        <label>DT LEN Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Line_2__c</fullName>
        <label>DT LEN Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Line_3__c</fullName>
        <label>DT LEN Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Name__c</fullName>
        <label>DT LEN Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Phone__c</fullName>
        <label>DT LEN Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Special_Delivery_Comments__c</fullName>
        <label>DT LEN Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>